# phantomx_description

./: CMakeLists.txt  README.md  model.config  package.xml
urdf/: autogen_phantomx.urdf  phantomx.urdf  phantomx.xacro  phantomx_urdf.xacro
